; ModuleID = '/home/carl/AnghaBench/netdata/libnetdata/dictionary/extr_dictionary.c_dictionary_del.c'
source_filename = "/home/carl/AnghaBench/netdata/libnetdata/dictionary/extr_dictionary.c_dictionary_del.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@D_DICTIONARY = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [37 x i8] c"DEL dictionary entry with name '%s'.\00", align 1
@.str.1 = private unnamed_addr constant [43 x i8] c"Not found dictionary entry with name '%s'.\00", align 1
@.str.2 = private unnamed_addr constant [39 x i8] c"Found dictionary entry with name '%s'.\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dictionary_del(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i32, i32* @D_DICTIONARY, align 4
  %8 = load i8*, i8** %4, align 8
  %9 = call i32 @debug(i32 %7, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0), i8* %8)
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @dictionary_write_lock(i32* %10)
  %12 = load i32*, i32** %3, align 8
  %13 = load i8*, i8** %4, align 8
  %14 = call i32* @dictionary_name_value_index_find_nolock(i32* %12, i8* %13, i32 0)
  store i32* %14, i32** %6, align 8
  %15 = load i32*, i32** %6, align 8
  %16 = icmp ne i32* %15, null
  %17 = xor i1 %16, true
  %18 = zext i1 %17 to i32
  %19 = call i64 @unlikely(i32 %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %25

21:                                               ; preds = %2
  %22 = load i32, i32* @D_DICTIONARY, align 4
  %23 = load i8*, i8** %4, align 8
  %24 = call i32 @debug(i32 %22, i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str.1, i64 0, i64 0), i8* %23)
  store i32 -1, i32* %5, align 4
  br label %32

25:                                               ; preds = %2
  %26 = load i32, i32* @D_DICTIONARY, align 4
  %27 = load i8*, i8** %4, align 8
  %28 = call i32 @debug(i32 %26, i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.2, i64 0, i64 0), i8* %27)
  %29 = load i32*, i32** %3, align 8
  %30 = load i32*, i32** %6, align 8
  %31 = call i32 @dictionary_name_value_destroy_nolock(i32* %29, i32* %30)
  store i32 0, i32* %5, align 4
  br label %32

32:                                               ; preds = %25, %21
  %33 = load i32*, i32** %3, align 8
  %34 = call i32 @dictionary_unlock(i32* %33)
  %35 = load i32, i32* %5, align 4
  ret i32 %35
}

declare dso_local i32 @debug(i32, i8*, i8*) #1

declare dso_local i32 @dictionary_write_lock(i32*) #1

declare dso_local i32* @dictionary_name_value_index_find_nolock(i32*, i8*, i32) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @dictionary_name_value_destroy_nolock(i32*, i32*) #1

declare dso_local i32 @dictionary_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
